manifests/homer/homer-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer-svc
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.244
spec:
  selector:
    app: homer-pod
  ports:
    - name: http-homer-out
      protocol: TCP
      port: 80
      targetPort: http-homer
  type: LoadBalancer
