manifests/homer/homer-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-crowdsec-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host homer.juicewizerd.com
      secretName: juicewizerd-le-com-tls
  rules:
    - host: *host
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homer-svc
                port:
                  number: 80
